cmake_minimum_required(VERSION 3.22)
project(Maratona)

set(CMAKE_CXX_STANDARD 17)

add_executable(teste teste.cpp)

add_executable(Slide01Ex01 aulas/Slide01/Ex01/Slide01Ex01.cpp)
add_executable(Slide01Ex02 aulas/Slide01/Ex02/Slide01Ex02.cpp)
add_executable(Slide01Ex03 aulas/Slide01/Ex03/Slide01Ex03.cpp)
add_executable(Slide01Ex04 aulas/Slide01/Ex04/Slide01Ex04.cpp)

add_executable(Slide03Ex01 aulas/Slide03/Ex01/Slide03Ex01.cpp)
add_executable(Slide03Ex02 aulas/Slide03/Ex02/Slide03Ex02.cpp)
add_executable(Slide03Ex03 aulas/Slide03/Ex03/Slide03Ex03.cpp)

add_executable(Slide04Ex01 aulas/Slide04/Ex01/Slide04Ex01.cpp)

add_executable(Slide05Ex01 aulas/Slide05/Ex01/Slide05Ex01.cpp)
add_executable(Slide05Ex02 aulas/Slide05/Ex02/Slide05Ex02.cpp)
add_executable(Slide05Ex03 aulas/Slide05/Ex03/Slide05Ex03.cpp)

add_executable(beecrowdEx1000 beecrowd/exs-10xx/ex-1000/beecrowd-ex-1000.cpp)
add_executable(beecrowdEx1001 beecrowd/exs-10xx/Ex1001/beecrowdEx1001.cpp)
add_executable(beecrowdEx1002 beecrowd/exs-10xx/Ex1002/beecrowdEx1002.cpp)
add_executable(beecrowdEx1003 beecrowd/exs-10xx/Ex1003/beecrowdEx1003.cpp)
add_executable(beecrowdEx1004 beecrowd/exs-10xx/Ex1004/beecrowdEx1004.cpp)
add_executable(beecrowdEx1005 beecrowd/exs-10xx/Ex1005/beecrowdEx1005.cpp)
add_executable(beecrowdEx1006 beecrowd/exs-10xx/Ex1006/beecrowdEx1006.cpp)
add_executable(beecrowdEx1007 beecrowd/exs-10xx/Ex1007/beecrowdEx1007.cpp)
add_executable(beecrowdEx1008 beecrowd/exs-10xx/Ex1008/beecrowdEx1008.cpp)
add_executable(beecrowdEx1009 beecrowd/exs-10xx/Ex1009/beecrowdEx1009.cpp)
add_executable(beecrowdEx1010 beecrowd/exs-10xx/Ex1010/beecrowdEx1010.cpp)
add_executable(beecrowdEx1011 beecrowd/exs-10xx/Ex1011/beecrowdEx1011.cpp)
add_executable(beecrowdEx1012 beecrowd/exs-10xx/Ex1012/beecrowdEx1012.cpp)
add_executable(beecrowdEx1013 beecrowd/exs-10xx/Ex1013/beecrowdEx1013.cpp)
add_executable(beecrowdEx1014 beecrowd/exs-10xx/Ex1014/beecrowdEx1014.cpp)
add_executable(beecrowdEx1015 beecrowd/exs-10xx/Ex1015/beecrowdEx1015.cpp)
add_executable(beecrowdEx1016 beecrowd/exs-10xx/Ex1016/beecrowdEx1016.cpp)
add_executable(beecrowdEx1017 beecrowd/exs-10xx/Ex1017/beecrowdEx1017.cpp)
add_executable(beecrowdEx1018 beecrowd/exs-10xx/Ex1018/beecrowdEx1018.cpp)
add_executable(beecrowdEx1019 beecrowd/exs-10xx/Ex1019/beecrowdEx1019.cpp)
add_executable(beecrowdEx1020 beecrowd/exs-10xx/Ex1020/beecrowdEx1020.cpp)
add_executable(beecrowdEx1021 beecrowd/exs-10xx/Ex1021/beecrowdEx1021.cpp)
add_executable(beecrowdEx1025 beecrowd/exs-10xx/Ex1025/beecrowdEx1025.cpp)
add_executable(beecrowdEx1028 beecrowd/exs-10xx/Ex1028/beecrowdEx1028.cpp)
add_executable(beecrowdEx1035 beecrowd/exs-10xx/Ex1035/beecrowdEx1035.cpp)
add_executable(beecrowdEx1036 beecrowd/exs-10xx/Ex1036/beecrowdEx1036.cpp)
add_executable(beecrowdEx1037 beecrowd/exs-10xx/Ex1037/beecrowdEx1037.cpp)
add_executable(beecrowdEx1038 beecrowd/exs-10xx/Ex1038/beecrowdEx1038.cpp)
add_executable(beecrowdEx1040 beecrowd/exs-10xx/Ex1040/beecrowdEx1040.cpp)
add_executable(beecrowdEx1041 beecrowd/exs-10xx/Ex1041/beecrowdEx1041.cpp)
add_executable(beecrowdEx1042 beecrowd/exs-10xx/Ex1042/beecrowdEx1042.cpp)
add_executable(beecrowdEx1043 beecrowd/exs-10xx/Ex1043/beecrowdEx1043.cpp)
add_executable(beecrowdEx1044 beecrowd/exs-10xx/Ex1044/beecrowdEx1044.cpp)
add_executable(beecrowdEx1045 beecrowd/exs-10xx/Ex1045/beecrowdEx1045.cpp)
add_executable(beecrowdEx1046 beecrowd/exs-10xx/Ex1046/beecrowdEx1046.cpp)
add_executable(beecrowdEx1047 beecrowd/exs-10xx/Ex1047/beecrowdEx1047.cpp)
add_executable(beecrowdEx1048 beecrowd/exs-10xx/Ex1048/beecrowdEx1048.cpp)
add_executable(beecrowdEx1049 beecrowd/exs-10xx/Ex1049/beecrowdEx1049.cpp)
add_executable(beecrowdEx1050 beecrowd/exs-10xx/Ex1050/beecrowdEx1050.cpp)
add_executable(beecrowdEx1051 beecrowd/exs-10xx/Ex1051/beecrowdEx1051.cpp)
add_executable(beecrowdEx1052 beecrowd/exs-10xx/Ex1052/beecrowdEx1052.cpp)
add_executable(beecrowdEx1059 beecrowd/exs-10xx/Ex1059/beecrowdEx1059.cpp)
add_executable(beecrowdEx1060 beecrowd/exs-10xx/Ex1060/beecrowdEx1060.cpp)
add_executable(beecrowdEx1062 beecrowd/exs-10xx/Ex1062/beecrowdEx1062.cpp)
add_executable(beecrowdEx1064 beecrowd/exs-10xx/Ex1064/beecrowdEx1064.cpp)
add_executable(beecrowdEx1065 beecrowd/exs-10xx/Ex1065/beecrowdEx1065.cpp)
add_executable(beecrowdEx1066 beecrowd/exs-10xx/Ex1066/beecrowdEx1066.cpp)
add_executable(beecrowdEx1067 beecrowd/exs-10xx/Ex1067/beecrowdEx1067.cpp)
add_executable(beecrowdEx1068 beecrowd/exs-10xx/Ex1068/beecrowdEx1068.cpp)
add_executable(beecrowdEx1069 beecrowd/exs-10xx/Ex1069/beecrowdEx1069.cpp)
add_executable(beecrowdEx1070 beecrowd/exs-10xx/Ex1070/beecrowdEx1070.cpp)
add_executable(beecrowdEx1071 beecrowd/exs-10xx/Ex1071/beecrowdEx1071.cpp)
add_executable(beecrowdEx1072 beecrowd/exs-10xx/Ex1072/beecrowdEx1072.cpp)
add_executable(beecrowdEx1073 beecrowd/exs-10xx/Ex1073/beecrowdEx1073.cpp)
add_executable(beecrowdEx1074 beecrowd/exs-10xx/Ex1074/beecrowdEx1074.cpp)
add_executable(beecrowdEx1075 beecrowd/exs-10xx/Ex1075/beecrowdEx1075.cpp)
add_executable(beecrowdEx1076 beecrowd/exs-10xx/Ex1076/beecrowdEx1076.cpp)
add_executable(beecrowdEx1078 beecrowd/exs-10xx/Ex1078/beecrowdEx1078.cpp)
add_executable(beecrowdEx1080 beecrowd/exs-10xx/Ex1080/beecrowdEx1080.cpp)
add_executable(beecrowdEx1082 beecrowd/exs-10xx/ex-1082/beecrowdEx1082.cpp)

add_executable(beecrowdEx1110 beecrowd/Exs11XX/Ex1110/beecrowdEx1110.cpp)
add_executable(beecrowdEx1114 beecrowd/Exs11XX/Ex1114/beecrowdEx1114.cpp)
add_executable(beecrowdEx1143 beecrowd/Exs11XX/Ex1143/beecrowdEx1143.cpp)
add_executable(beecrowdEx1144 beecrowd/Exs11XX/Ex1144/beecrowdEx1144.cpp)
add_executable(beecrowdEx1152 beecrowd/Exs11XX/Ex1152/beecrowdEx1152.cpp)
add_executable(beecrowdEx1153 beecrowd/Exs11XX/Ex1153/beecrowdEx1153.cpp)
add_executable(beecrowdEx1157 beecrowd/Exs11XX/Ex1157/beecrowdEx1157.cpp)
add_executable(beecrowdEx1170 beecrowd/Exs11XX/Ex1170/beecrowdEx1170.cpp)
add_executable(beecrowdEx1171 beecrowd/Exs11XX/Ex1171/beecrowdEx1171.cpp)
add_executable(beecrowdEx1172 beecrowd/Exs11XX/Ex1172/beecrowdEx1172.cpp)
add_executable(beecrowdEx1173 beecrowd/Exs11XX/Ex1173/beecrowdEx1173.cpp)
add_executable(beecrowdEx1176 beecrowd/Exs11XX/Ex1176/beecrowdEx1176.cpp)
add_executable(beecrowdEx1180 beecrowd/Exs11XX/Ex1180/beecrowdEx1180.cpp)
add_executable(beecrowdEx1198 beecrowd/Exs11XX/Ex1198/beecrowdEx1198.cpp)

add_executable(beecrowdEx1212 beecrowd/Exs12XX/Ex1212/beecrowdEx1212.cpp)
add_executable(beecrowdEx1221 beecrowd/Exs12XX/Ex1221/beecrowdEx1221.cpp)
add_executable(beecrowdEx1245 beecrowd/Exs12XX/Ex1245/beecrowdEx1245.cpp)
add_executable(beecrowdEx1253 beecrowd/Exs12XX/Ex1253/beecrowdEx1253.cpp)
add_executable(beecrowdEx1259 beecrowd/Exs12XX/Ex1259/beecrowdEx1259.cpp)
add_executable(beecrowdEx1260 beecrowd/Exs12XX/Ex1260/beecrowdEx1260.cpp)
add_executable(beecrowdEx1261 beecrowd/Exs12XX/Ex1261/beecrowdEx1261.cpp)
add_executable(beecrowdEx1281 beecrowd/Exs12XX/Ex1281/beecrowdEx1281.cpp)

add_executable(beecrowdEx1303 beecrowd/Exs13XX/Ex1303/beecrowdEx1303.cpp)
add_executable(beecrowdEx1307 beecrowd/Exs13XX/Ex1307/beecrowdEx1307.cpp)
add_executable(beecrowdEx1308 beecrowd/Exs13XX/Ex1308/beecrowdEx1308.cpp)
add_executable(beecrowdEx1318 beecrowd/Exs13XX/Ex1318/beecrowdEx1318.cpp)
add_executable(beecrowdEx1329 beecrowd/Exs13XX/Ex1329/beecrowdEx1329.cpp)

add_executable(beecrowdEx1410 beecrowd/Exs14XX/Ex1410/beecrowdEx1410.cpp)
add_executable(beecrowdEx1430 beecrowd/Exs14XX/Ex1430/beecrowdEx1430.cpp)
add_executable(beecrowdEx1436 beecrowd/Exs14XX/Ex1436/beecrowdEx1436.cpp)
add_executable(beecrowdEx1471 beecrowd/Exs14XX/Ex1471/beecrowdEx1471.cpp)

add_executable(beecrowdEx1547 beecrowd/Exs15XX/Ex1547/beecrowdEx1547.cpp)
add_executable(beecrowdEx1548 beecrowd/Exs15XX/Ex1548/beecrowdEx1548.cpp)
add_executable(beecrowdEx1561 beecrowd/Exs15XX/Ex1561/beecrowdEx1561.cpp)
add_executable(beecrowdEx1583 beecrowd/Exs15XX/Ex1583/beecrowdEx1583.cpp)
add_executable(beecrowdEx1589 beecrowd/Exs15XX/Ex1589/beecrowdEx1589.cpp)

add_executable(beecrowdEx1607 beecrowd/Exs16XX/Ex1607/beecrowdEx1607.cpp)
add_executable(beecrowdEx1609 beecrowd/Exs16XX/Ex1609/beecrowdEx1609.cpp)
add_executable(beecrowdEx1676 beecrowd/Exs16XX/Ex1676/beecrowdEx1676.cpp)

add_executable(beecrowdEx1763 beecrowd/Exs17XX/Ex1763/beecrowdEx1763.cpp)

add_executable(beecrowdEx1835 beecrowd/Exs18XX/Ex1835/beecrowdEx1835.cpp)
add_executable(beecrowdEx1866 beecrowd/Exs18XX/Ex1866/beecrowdEx1866.cpp)

add_executable(beecrowdEx1909 beecrowd/Exs19XX/Ex1909/beecrowdEx1909.cpp)
add_executable(beecrowdEx1910 beecrowd/Exs19XX/Ex1910/beecrowdEx1910.cpp)
add_executable(beecrowdEx1933 beecrowd/Exs19XX/Ex1933/beecrowdEx1933.cpp)
add_executable(beecrowdEx1943 beecrowd/Exs19XX/Ex1943/beecrowdEx1943.cpp)
add_executable(beecrowdEx1960 beecrowd/Exs19XX/Ex1960/beecrowdEx1960.cpp)
add_executable(beecrowdEx1985 beecrowd/Exs19XX/Ex1985/beecrowdEx1985.cpp)

add_executable(beecrowdEx2006 beecrowd/Exs20XX/Ex2006/beecrowdEx2006.cpp)
add_executable(beecrowdEx2058 beecrowd/Exs20XX/Ex2058/beecrowdEx2058.cpp)
add_executable(beecrowdEx2061 beecrowd/Exs20XX/Ex2061/beecrowdEx2061.cpp)

add_executable(beecrowdEx2162 beecrowd/Exs21XX/Ex2162/beecrowdEx2162.cpp)
add_executable(beecrowdEx2172 beecrowd/Exs21XX/Ex2172/beecrowdEx2172.cpp)
add_executable(beecrowdEx2174 beecrowd/Exs21XX/Ex2174/beecrowdEx2174.cpp)
add_executable(beecrowdEx2180 beecrowd/Exs21XX/Ex2180/beecrowdEx2180.cpp)

add_executable(beecrowdEx2312 beecrowd/Exs23XX/Ex2312/beecrowdEx2312.cpp)
add_executable(beecrowdEx2328 beecrowd/Exs23XX/Ex2328/beecrowdEx2328.cpp)
add_executable(beecrowdEx2339 beecrowd/Exs23XX/Ex2339/beecrowdEx2339.cpp)
add_executable(beecrowdEx2344 beecrowd/Exs23XX/Ex2344/beecrowdEx2344.cpp)
add_executable(beecrowdEx2369 beecrowd/Exs23XX/Ex2369/beecrowdEx2369.cpp)
add_executable(beecrowdEx2374 beecrowd/Exs23XX/Ex2374/beecrowdEx2374.cpp)
add_executable(beecrowdEx2375 beecrowd/Exs23XX/Ex2375/beecrowdEx2375.cpp)
add_executable(beecrowdEx2377 beecrowd/Exs23XX/Ex2377/beecrowdEx2377.cpp)
add_executable(beecrowdEx2388 beecrowd/Exs23XX/Ex2388/beecrowdEx2388.cpp)

add_executable(beecrowdEx2413 beecrowd/Exs24XX/Ex2413/beecrowdEx2413.cpp)
add_executable(beecrowdEx2416 beecrowd/Exs24XX/Ex2416/beecrowdEx2416.cpp)
add_executable(beecrowdEx2434 beecrowd/Exs24XX/Ex2434/beecrowdEx2434.cpp)
add_executable(beecrowdEx2440 beecrowd/Exs24XX/Ex2440/beecrowdEx2440.cpp)
add_executable(beecrowdEx2455 beecrowd/Exs24XX/Ex2455/beecrowdEx2455.cpp)
add_executable(beecrowdEx2478 beecrowd/Exs24XX/Ex2478/beecrowdEx2478.cpp)

add_executable(beecrowdEx2514 beecrowd/Exs25XX/Ex2514/beecrowdEx2514.cpp)
add_executable(beecrowdEx2534 beecrowd/Exs25XX/Ex2534/beecrowdEx2534.cpp)
add_executable(beecrowdEx2562 beecrowd/Exs25XX/Ex2562/beecrowdEx2562.cpp)
add_executable(beecrowdEx2567 beecrowd/Exs25XX/Ex2567/beecrowdEx2567.cpp)
add_executable(beecrowdEx2598 beecrowd/Exs25XX/Ex2598/beecrowdEx2598.cpp)

add_executable(beecrowdEx2653 beecrowd/Exs26XX/Ex2653/beecrowdEx2653.cpp)
add_executable(beecrowdEx2670 beecrowd/Exs26XX/Ex2670/beecrowdEx2670.cpp)
add_executable(beecrowdEx2674 beecrowd/Exs26XX/Ex2674/beecrowdEx2674.cpp)

add_executable(beecrowdEx2717 beecrowd/Exs27XX/Ex2717/beecrowdEx2717.cpp)
add_executable(beecrowdEx2752 beecrowd/Exs27XX/Ex2752/beecrowdEx2752.cpp)
add_executable(beecrowdEx2756 beecrowd/Exs27XX/Ex2756/beecrowdEx2756.cpp)
add_executable(beecrowdEx2783 beecrowd/Exs27XX/Ex2783/beecrowdEx2783.cpp)
add_executable(beecrowdEx2791 beecrowd/Exs27XX/Ex2791/beecrowdEx2791.cpp)

add_executable(beecrowdEx2813 beecrowd/Exs28XX/Ex2813/beecrowdEx2813.cpp)
add_executable(beecrowdEx2839 beecrowd/Exs28XX/Ex2839/beecrowdEx2839.cpp)
add_executable(beecrowdEx2896 beecrowd/Exs28XX/Ex2896/beecrowdEx2896.cpp)

add_executable(beecrowdEx2936 beecrowd/Exs29XX/Ex2936/beecrowdEx2936.cpp)
add_executable(beecrowdEx2987 beecrowd/Exs29XX/Ex2987/beecrowdEx2987.cpp)

add_executable(beecrowdEx3004 beecrowd/Exs30XX/Ex3004/beecrowdEx3004.cpp)
add_executable(beecrowdEx3046 beecrowd/Exs30XX/Ex3046/beecrowdEx3046.cpp)
add_executable(beecrowdEx3047 beecrowd/Exs30XX/Ex3047/beecrowdEx3047.cpp)
add_executable(beecrowdEx3048 beecrowd/Exs30XX/Ex3048/beecrowdEx3048.cpp)
add_executable(beecrowdEx3055 beecrowd/Exs30XX/Ex3055/beecrowdEx3055.cpp)

add_executable(beecrowdEx3129 beecrowd/Exs31XX/Ex3129/beecrowdEx3129.cpp)
add_executable(beecrowdEx3139 beecrowd/Exs31XX/Ex3139/beecrowdEx3139.cpp)
add_executable(beecrowdEx3170 beecrowd/Exs31XX/Ex3170/beecrowdEx3170.cpp)

add_executable(beecrowdEx3342 beecrowd/Exs33XX/Ex3342/beecrowdEx3342.cpp)
add_executable(beecrowdEx3399 beecrowd/Exs33XX/Ex3399/beecrowdEx3399.cpp)

add_executable(beecrowdEx3405 beecrowd/Exs34XX/Ex3405/beecrowdEx3405.cpp)
add_executable(beecrowdEx3424 beecrowd/Exs34XX/Ex3424/beecrowdEx3424.cpp)

add_executable(codeforces-ex-0004-a codeforces/exs-00xx/exs-0004/a/codeforces-ex-0004-a.cpp)

add_executable(codeforces-ex-1833-a codeforces/exs-18xx/exs-1833/a/codeforces-ex-1833-a.cpp)
add_executable(codeforces-ex-1833-b codeforces/exs-18xx/exs-1833/b/codeforces-ex-1833-b.cpp)
add_executable(codeforces-ex-1833-c codeforces/exs-18xx/exs-1833/c/codeforces-ex-1833-c.cpp)

add_executable(codeforces-ex-1851-a codeforces/exs-18xx/exs-1851/a/codeforces-ex-1851-a.cpp)
add_executable(codeforces-ex-1851-b codeforces/exs-18xx/exs-1851/b/codeforces-ex-1851-b.cpp)
add_executable(codeforces-ex-1851-c codeforces/exs-18xx/exs-1851/c/codeforces-ex-1851-c.cpp)

add_executable(codeforces-ex-1872-a codeforces/exs-18xx/exs-1872/a/codeforces-ex-1872-a.cpp)
add_executable(codeforces-ex-1872-b codeforces/exs-18xx/exs-1872/b/codeforces-ex-1872-b.cpp)
add_executable(codeforces-ex-1872-c codeforces/exs-18xx/exs-1872/c/codeforces-ex-1872-c.cpp)

add_executable(codeforces-ex-1881-a codeforces/exs-18xx/exs-1881/a/codeforces-ex-1881-a.cpp)
add_executable(codeforces-ex-1881-b codeforces/exs-18xx/exs-1881/b/codeforces-ex-1881-b.cpp)
add_executable(codeforces-ex-1881-c codeforces/exs-18xx/exs-1881/c/codeforces-ex-1881-c.cpp)

add_executable(codeforces-ex-1899-a codeforces/exs-18xx/exs-1899/a/codeforces-ex-1899-a.cpp)
add_executable(codeforces-ex-1899-c codeforces/exs-18xx/exs-1899/c/codeforces-ex-1899-c.cpp)

add_executable(codeforces-ex-1907-a codeforces/exs-19xx/exs-1907/a/codeforces-ex-1907-a.cpp)
add_executable(codeforces-ex-1907-b codeforces/exs-19xx/exs-1907/b/codeforces-ex-1907-b.cpp)
add_executable(codeforces-ex-1907-c codeforces/exs-19xx/exs-1907/c/codeforces-ex-1907-c.cpp)

add_executable(uva-ex-00459 uva/exs-004xx/ex-00459/uva-ex-00459.cpp)