cmake_minimum_required(VERSION 3.22)
project(Maratona)

set(CMAKE_CXX_STANDARD 17)

add_executable(beecrowd-ex-1000 beecrowd/exs-10xx/ex-1000/beecrowd-ex-1000.cpp)
add_executable(beecrowd-ex-1001 beecrowd/exs-10xx/ex-1001/beecrowd-ex-1001.cpp)
add_executable(beecrowd-ex-1002 beecrowd/exs-10xx/ex-1002/beecrowdEx1002.cpp)
add_executable(beecrowd-ex-1003 beecrowd/exs-10xx/ex-1003/beecrowdEx1003.cpp)
add_executable(beecrowd-ex-1004 beecrowd/exs-10xx/ex-1004/beecrowdEx1004.cpp)
add_executable(beecrowd-ex-1005 beecrowd/exs-10xx/ex-1005/beecrowdEx1005.cpp)
add_executable(beecrowd-ex-1006 beecrowd/exs-10xx/ex-1006/beecrowdEx1006.cpp)
add_executable(beecrowd-ex-1007 beecrowd/exs-10xx/ex-1007/beecrowdEx1007.cpp)
add_executable(beecrowd-ex-1008 beecrowd/exs-10xx/ex-1008/beecrowdEx1008.cpp)
add_executable(beecrowd-ex-1009 beecrowd/exs-10xx/ex-1009/beecrowdEx1009.cpp)
add_executable(beecrowd-ex-1010 beecrowd/exs-10xx/ex-1010/beecrowdEx1010.cpp)
add_executable(beecrowd-ex-1011 beecrowd/exs-10xx/ex-1011/beecrowdEx1011.cpp)
add_executable(beecrowd-ex-1012 beecrowd/exs-10xx/ex-1012/beecrowdEx1012.cpp)
add_executable(beecrowd-ex-1013 beecrowd/exs-10xx/ex-1013/beecrowdEx1013.cpp)
add_executable(beecrowd-ex-1014 beecrowd/exs-10xx/ex-1014/beecrowdEx1014.cpp)
add_executable(beecrowd-ex-1015 beecrowd/exs-10xx/ex-1015/beecrowdEx1015.cpp)
add_executable(beecrowd-ex-1016 beecrowd/exs-10xx/ex-1016/beecrowdEx1016.cpp)
add_executable(beecrowd-ex-1017 beecrowd/exs-10xx/ex-1017/beecrowdEx1017.cpp)
add_executable(beecrowd-ex-1018 beecrowd/exs-10xx/ex-1018/beecrowdEx1018.cpp)
add_executable(beecrowd-ex-1019 beecrowd/exs-10xx/ex-1019/beecrowdEx1019.cpp)
add_executable(beecrowd-ex-1020 beecrowd/exs-10xx/ex-1020/beecrowdEx1020.cpp)
add_executable(beecrowd-ex-1021 beecrowd/exs-10xx/ex-1021/beecrowdEx1021.cpp)
add_executable(beecrowd-ex-1025 beecrowd/exs-10xx/ex-1025/beecrowdEx1025.cpp)
add_executable(beecrowd-ex-1028 beecrowd/exs-10xx/ex-1028/beecrowdEx1028.cpp)
add_executable(beecrowd-ex-1035 beecrowd/exs-10xx/ex-1035/beecrowdEx1035.cpp)
add_executable(beecrowd-ex-1036 beecrowd/exs-10xx/ex-1036/beecrowdEx1036.cpp)
add_executable(beecrowd-ex-1037 beecrowd/exs-10xx/ex-1037/beecrowdEx1037.cpp)
add_executable(beecrowd-ex-1038 beecrowd/exs-10xx/ex-1038/beecrowdEx1038.cpp)
add_executable(beecrowd-ex-1040 beecrowd/exs-10xx/ex-1040/beecrowdEx1040.cpp)
add_executable(beecrowd-ex-1041 beecrowd/exs-10xx/ex-1041/beecrowdEx1041.cpp)
add_executable(beecrowd-ex-1042 beecrowd/exs-10xx/ex-1042/beecrowdEx1042.cpp)
add_executable(beecrowd-ex-1043 beecrowd/exs-10xx/ex-1043/beecrowdEx1043.cpp)
add_executable(beecrowd-ex-1044 beecrowd/exs-10xx/ex-1044/beecrowdEx1044.cpp)
add_executable(beecrowd-ex-1045 beecrowd/exs-10xx/ex-1045/beecrowdEx1045.cpp)
add_executable(beecrowd-ex-1046 beecrowd/exs-10xx/ex-1046/beecrowdEx1046.cpp)
add_executable(beecrowd-ex-1047 beecrowd/exs-10xx/ex-1047/beecrowdEx1047.cpp)
add_executable(beecrowd-ex-1048 beecrowd/exs-10xx/ex-1048/beecrowdEx1048.cpp)
add_executable(beecrowd-ex-1049 beecrowd/exs-10xx/ex-1049/beecrowdEx1049.cpp)
add_executable(beecrowd-ex-1050 beecrowd/exs-10xx/ex-1050/beecrowdEx1050.cpp)
add_executable(beecrowd-ex-1051 beecrowd/exs-10xx/ex-1051/beecrowdEx1051.cpp)
add_executable(beecrowd-ex-1052 beecrowd/exs-10xx/ex-1052/beecrowdEx1052.cpp)
add_executable(beecrowd-ex-1059 beecrowd/exs-10xx/ex-1059/beecrowdEx1059.cpp)
add_executable(beecrowd-ex-1060 beecrowd/exs-10xx/ex-1060/beecrowdEx1060.cpp)
add_executable(beecrowd-ex-1062 beecrowd/exs-10xx/ex-1062/beecrowdEx1062.cpp)
add_executable(beecrowd-ex-1064 beecrowd/exs-10xx/ex-1064/beecrowdEx1064.cpp)
add_executable(beecrowd-ex-1065 beecrowd/exs-10xx/ex-1065/beecrowdEx1065.cpp)
add_executable(beecrowd-ex-1066 beecrowd/exs-10xx/ex-1066/beecrowdEx1066.cpp)
add_executable(beecrowd-ex-1067 beecrowd/exs-10xx/ex-1067/beecrowdEx1067.cpp)
add_executable(beecrowd-ex-1068 beecrowd/exs-10xx/ex-1068/beecrowdEx1068.cpp)
add_executable(beecrowd-ex-1069 beecrowd/exs-10xx/ex-1069/beecrowdEx1069.cpp)
add_executable(beecrowd-ex-1070 beecrowd/exs-10xx/ex-1070/beecrowdEx1070.cpp)
add_executable(beecrowd-ex-1071 beecrowd/exs-10xx/ex-1071/beecrowdEx1071.cpp)
add_executable(beecrowd-ex-1072 beecrowd/exs-10xx/ex-1072/beecrowdEx1072.cpp)
add_executable(beecrowd-ex-1073 beecrowd/exs-10xx/ex-1073/beecrowdEx1073.cpp)
add_executable(beecrowd-ex-1074 beecrowd/exs-10xx/ex-1074/beecrowdEx1074.cpp)
add_executable(beecrowd-ex-1075 beecrowd/exs-10xx/ex-1075/beecrowdEx1075.cpp)
add_executable(beecrowd-ex-1076 beecrowd/exs-10xx/ex-1076/beecrowdEx1076.cpp)
add_executable(beecrowd-ex-1078 beecrowd/exs-10xx/ex-1078/beecrowdEx1078.cpp)
add_executable(beecrowd-ex-1080 beecrowd/exs-10xx/ex-1080/beecrowdEx1080.cpp)
add_executable(beecrowd-ex-1082 beecrowd/exs-10xx/ex-1082/beecrowdEx1082.cpp)

add_executable(beecrowd-ex-1110 beecrowd/exs-11xx/ex-1110/beecrowdEx1110.cpp)
add_executable(beecrowd-ex-1114 beecrowd/exs-11xx/ex-1114/beecrowdEx1114.cpp)
add_executable(beecrowd-ex-1143 beecrowd/exs-11xx/ex-1143/beecrowdEx1143.cpp)
add_executable(beecrowd-ex-1144 beecrowd/exs-11xx/ex-1144/beecrowdEx1144.cpp)
add_executable(beecrowd-ex-1152 beecrowd/exs-11xx/ex-1152/beecrowdEx1152.cpp)
add_executable(beecrowd-ex-1153 beecrowd/exs-11xx/ex-1153/beecrowdEx1153.cpp)
add_executable(beecrowd-ex-1157 beecrowd/exs-11xx/ex-1157/beecrowdEx1157.cpp)
add_executable(beecrowd-ex-1170 beecrowd/exs-11xx/ex-1170/beecrowdEx1170.cpp)
add_executable(beecrowd-ex-1171 beecrowd/exs-11xx/ex-1171/beecrowdEx1171.cpp)
add_executable(beecrowd-ex-1172 beecrowd/exs-11xx/ex-1172/beecrowdEx1172.cpp)
add_executable(beecrowd-ex-1173 beecrowd/exs-11xx/ex-1173/beecrowdEx1173.cpp)
add_executable(beecrowd-ex-1176 beecrowd/exs-11xx/ex-1176/beecrowdEx1176.cpp)
add_executable(beecrowd-ex-1180 beecrowd/exs-11xx/ex-1180/beecrowdEx1180.cpp)
add_executable(beecrowd-ex-1198 beecrowd/exs-11xx/ex-1198/beecrowdEx1198.cpp)

add_executable(beecrowd-ex-1212 beecrowd/exs-12xx/ex-1212/beecrowdEx1212.cpp)
add_executable(beecrowd-ex-1221 beecrowd/exs-12xx/ex-1221/beecrowdEx1221.cpp)
add_executable(beecrowd-ex-1245 beecrowd/exs-12xx/ex-1245/beecrowdEx1245.cpp)
add_executable(beecrowd-ex-1253 beecrowd/exs-12xx/ex-1253/beecrowdEx1253.cpp)
add_executable(beecrowd-ex-1259 beecrowd/exs-12xx/ex-1259/beecrowdEx1259.cpp)
add_executable(beecrowd-ex-1260 beecrowd/exs-12xx/ex-1260/beecrowdEx1260.cpp)
add_executable(beecrowd-ex-1261 beecrowd/exs-12xx/ex-1261/beecrowdEx1261.cpp)
add_executable(beecrowd-ex-1281 beecrowd/exs-12xx/ex-1281/beecrowdEx1281.cpp)

add_executable(beecrowd-ex-1303 beecrowd/exs-13xx/ex-1303/beecrowdEx1303.cpp)
add_executable(beecrowd-ex-1307 beecrowd/exs-13xx/ex-1307/beecrowdEx1307.cpp)
add_executable(beecrowd-ex-1308 beecrowd/exs-13xx/ex-1308/beecrowdEx1308.cpp)
add_executable(beecrowd-ex-1318 beecrowd/exs-13xx/ex-1318/beecrowdEx1318.cpp)
add_executable(beecrowd-ex-1329 beecrowd/exs-13xx/ex-1329/beecrowdEx1329.cpp)

add_executable(beecrowd-ex-1410 beecrowd/exs-14xx/ex-1410/beecrowdEx1410.cpp)
add_executable(beecrowd-ex-1430 beecrowd/exs-14xx/ex-1430/beecrowdEx1430.cpp)
add_executable(beecrowd-ex-1436 beecrowd/exs-14xx/ex-1436/beecrowdEx1436.cpp)
add_executable(beecrowd-ex-1471 beecrowd/exs-14xx/ex-1471/beecrowdEx1471.cpp)

add_executable(beecrowd-ex-1547 beecrowd/exs-15xx/ex-1547/beecrowdEx1547.cpp)
add_executable(beecrowd-ex-1548 beecrowd/exs-15xx/ex-1548/beecrowdEx1548.cpp)
add_executable(beecrowd-ex-1561 beecrowd/exs-15xx/ex-1561/beecrowdEx1561.cpp)
add_executable(beecrowd-ex-1583 beecrowd/exs-15xx/ex-1583/beecrowdEx1583.cpp)
add_executable(beecrowd-ex-1589 beecrowd/exs-15xx/ex-1589/beecrowdEx1589.cpp)

add_executable(beecrowd-ex-1607 beecrowd/exs-16xx/ex-1607/beecrowdEx1607.cpp)
add_executable(beecrowd-ex-1609 beecrowd/exs-16xx/ex-1609/beecrowdEx1609.cpp)
add_executable(beecrowd-ex-1676 beecrowd/exs-16xx/ex-1676/beecrowdEx1676.cpp)

add_executable(beecrowd-ex-1763 beecrowd/exs-17xx/ex-1763/beecrowdEx1763.cpp)

add_executable(beecrowd-ex-1835 beecrowd/exs-18xx/ex-1835/beecrowdEx1835.cpp)
add_executable(beecrowd-ex-1866 beecrowd/exs-18xx/ex-1866/beecrowdEx1866.cpp)

add_executable(beecrowd-ex-1909 beecrowd/exs-19xx/ex-1909/beecrowdEx1909.cpp)
add_executable(beecrowd-ex-1910 beecrowd/exs-19xx/ex-1910/beecrowdEx1910.cpp)
add_executable(beecrowd-ex-1933 beecrowd/exs-19xx/ex-1933/beecrowdEx1933.cpp)
add_executable(beecrowd-ex-1943 beecrowd/exs-19xx/ex-1943/beecrowdEx1943.cpp)
add_executable(beecrowd-ex-1960 beecrowd/exs-19xx/ex-1960/beecrowdEx1960.cpp)
add_executable(beecrowd-ex-1985 beecrowd/exs-19xx/ex-1985/beecrowdEx1985.cpp)

add_executable(beecrowd-ex-2006 beecrowd/exs-20xx/ex-2006/beecrowdEx2006.cpp)
add_executable(beecrowd-ex-2058 beecrowd/exs-20xx/ex-2058/beecrowdEx2058.cpp)
add_executable(beecrowd-ex-2061 beecrowd/exs-20xx/ex-2061/beecrowdEx2061.cpp)

add_executable(beecrowd-ex-2162 beecrowd/exs-21xx/ex-2162/beecrowdEx2162.cpp)
add_executable(beecrowd-ex-2172 beecrowd/exs-21xx/ex-2172/beecrowdEx2172.cpp)
add_executable(beecrowd-ex-2174 beecrowd/exs-21xx/ex-2174/beecrowdEx2174.cpp)
add_executable(beecrowd-ex-2180 beecrowd/exs-21xx/ex-2180/beecrowdEx2180.cpp)

add_executable(beecrowd-ex-2312 beecrowd/exs-23xx/ex-2312/beecrowdEx2312.cpp)
add_executable(beecrowd-ex-2328 beecrowd/exs-23xx/ex-2328/beecrowdEx2328.cpp)
add_executable(beecrowd-ex-2339 beecrowd/exs-23xx/ex-2339/beecrowdEx2339.cpp)
add_executable(beecrowd-ex-2344 beecrowd/exs-23xx/ex-2344/beecrowdEx2344.cpp)
add_executable(beecrowd-ex-2369 beecrowd/exs-23xx/ex-2369/beecrowdEx2369.cpp)
add_executable(beecrowd-ex-2374 beecrowd/exs-23xx/ex-2374/beecrowdEx2374.cpp)
add_executable(beecrowd-ex-2375 beecrowd/exs-23xx/ex-2375/beecrowdEx2375.cpp)
add_executable(beecrowd-ex-2377 beecrowd/exs-23xx/ex-2377/beecrowdEx2377.cpp)
add_executable(beecrowd-ex-2388 beecrowd/exs-23xx/ex-2388/beecrowdEx2388.cpp)

add_executable(beecrowd-ex-2413 beecrowd/exs-24xx/ex-2413/beecrowdEx2413.cpp)
add_executable(beecrowd-ex-2416 beecrowd/exs-24xx/ex-2416/beecrowdEx2416.cpp)
add_executable(beecrowd-ex-2434 beecrowd/exs-24xx/ex-2434/beecrowdEx2434.cpp)
add_executable(beecrowd-ex-2440 beecrowd/exs-24xx/ex-2440/beecrowdEx2440.cpp)
add_executable(beecrowd-ex-2455 beecrowd/exs-24xx/ex-2455/beecrowdEx2455.cpp)
add_executable(beecrowd-ex-2478 beecrowd/exs-24xx/ex-2478/beecrowdEx2478.cpp)

add_executable(beecrowd-ex-2514 beecrowd/exs-25xx/ex-2514/beecrowdEx2514.cpp)
add_executable(beecrowd-ex-2534 beecrowd/exs-25xx/ex-2534/beecrowdEx2534.cpp)
add_executable(beecrowd-ex-2562 beecrowd/exs-25xx/ex-2562/beecrowdEx2562.cpp)
add_executable(beecrowd-ex-2567 beecrowd/exs-25xx/ex-2567/beecrowdEx2567.cpp)
add_executable(beecrowd-ex-2598 beecrowd/exs-25xx/ex-2598/beecrowdEx2598.cpp)

add_executable(beecrowd-ex-2653 beecrowd/exs-26xx/ex-2653/beecrowdEx2653.cpp)
add_executable(beecrowd-ex-2670 beecrowd/exs-26xx/ex-2670/beecrowdEx2670.cpp)
add_executable(beecrowd-ex-2674 beecrowd/exs-26xx/ex-2674/beecrowdEx2674.cpp)

add_executable(beecrowd-ex-2717 beecrowd/exs-27xx/ex-2717/beecrowdEx2717.cpp)
add_executable(beecrowd-ex-2752 beecrowd/exs-27xx/ex-2752/beecrowdEx2752.cpp)
add_executable(beecrowd-ex-2756 beecrowd/exs-27xx/ex-2756/beecrowdEx2756.cpp)
add_executable(beecrowd-ex-2783 beecrowd/exs-27xx/ex-2783/beecrowdEx2783.cpp)
add_executable(beecrowd-ex-2791 beecrowd/exs-27xx/ex-2791/beecrowdEx2791.cpp)

add_executable(beecrowd-ex-2813 beecrowd/exs-28xx/ex-2813/beecrowdEx2813.cpp)
add_executable(beecrowd-ex-2839 beecrowd/exs-28xx/ex-2839/beecrowdEx2839.cpp)
add_executable(beecrowd-ex-2896 beecrowd/exs-28xx/ex-2896/beecrowdEx2896.cpp)

add_executable(beecrowd-ex-2936 beecrowd/exs-29xx/ex-2936/beecrowdEx2936.cpp)
add_executable(beecrowd-ex-2987 beecrowd/exs-29xx/ex-2987/beecrowdEx2987.cpp)

add_executable(beecrowd-ex-3004 beecrowd/exs-30xx/ex-3004/beecrowdEx3004.cpp)
add_executable(beecrowd-ex-3046 beecrowd/exs-30xx/ex-3046/beecrowdEx3046.cpp)
add_executable(beecrowd-ex-3047 beecrowd/exs-30xx/ex-3047/beecrowdEx3047.cpp)
add_executable(beecrowd-ex-3048 beecrowd/exs-30xx/ex-3048/beecrowdEx3048.cpp)
add_executable(beecrowd-ex-3055 beecrowd/exs-30xx/ex-3055/beecrowdEx3055.cpp)

add_executable(beecrowd-ex-3129 beecrowd/exs-31xx/ex-3129/beecrowdEx3129.cpp)
add_executable(beecrowd-ex-3139 beecrowd/exs-31xx/ex-3139/beecrowdEx3139.cpp)
add_executable(beecrowd-ex-3170 beecrowd/exs-31xx/ex-3170/beecrowdEx3170.cpp)

add_executable(beecrowd-ex-3342 beecrowd/exs-33xx/ex-3342/beecrowdEx3342.cpp)
add_executable(beecrowd-ex-3399 beecrowd/exs-33xx/ex-3399/beecrowdEx3399.cpp)

add_executable(beecrowd-ex-3405 beecrowd/exs-34xx/ex-3405/beecrowdEx3405.cpp)
add_executable(beecrowd-ex-3424 beecrowd/exs-34xx/ex-3424/beecrowdEx3424.cpp)

add_executable(codeforces-ex-0004-a codeforces/exs-00xx/exs-0004/a/codeforces-ex-0004-a.cpp)

add_executable(codeforces-ex-1833-a codeforces/exs-18xx/exs-1833/a/codeforces-ex-1833-a.cpp)
add_executable(codeforces-ex-1833-b codeforces/exs-18xx/exs-1833/b/codeforces-ex-1833-b.cpp)
add_executable(codeforces-ex-1833-c codeforces/exs-18xx/exs-1833/c/codeforces-ex-1833-c.cpp)

add_executable(codeforces-ex-1851-a codeforces/exs-18xx/exs-1851/a/codeforces-ex-1851-a.cpp)
add_executable(codeforces-ex-1851-b codeforces/exs-18xx/exs-1851/b/codeforces-ex-1851-b.cpp)
add_executable(codeforces-ex-1851-c codeforces/exs-18xx/exs-1851/c/codeforces-ex-1851-c.cpp)

add_executable(codeforces-ex-1872-a codeforces/exs-18xx/exs-1872/a/codeforces-ex-1872-a.cpp)
add_executable(codeforces-ex-1872-b codeforces/exs-18xx/exs-1872/b/codeforces-ex-1872-b.cpp)
add_executable(codeforces-ex-1872-c codeforces/exs-18xx/exs-1872/c/codeforces-ex-1872-c.cpp)

add_executable(codeforces-ex-1881-a codeforces/exs-18xx/exs-1881/a/codeforces-ex-1881-a.cpp)
add_executable(codeforces-ex-1881-b codeforces/exs-18xx/exs-1881/b/codeforces-ex-1881-b.cpp)
add_executable(codeforces-ex-1881-c codeforces/exs-18xx/exs-1881/c/codeforces-ex-1881-c.cpp)

add_executable(codeforces-ex-1899-a codeforces/exs-18xx/exs-1899/a/codeforces-ex-1899-a.cpp)
add_executable(codeforces-ex-1899-c codeforces/exs-18xx/exs-1899/c/codeforces-ex-1899-c.cpp)

add_executable(codeforces-ex-1907-a codeforces/exs-19xx/exs-1907/a/codeforces-ex-1907-a.cpp)
add_executable(codeforces-ex-1907-b codeforces/exs-19xx/exs-1907/b/codeforces-ex-1907-b.cpp)
add_executable(codeforces-ex-1907-c codeforces/exs-19xx/exs-1907/c/codeforces-ex-1907-c.cpp)

add_executable(map recursos/estruturas-de-dados/map/map.cpp)
add_executable(queue recursos/estruturas-de-dados/queue/queue.cpp)
add_executable(set recursos/estruturas-de-dados/set/set.cpp)
add_executable(stack recursos/estruturas-de-dados/stack/stack.cpp)

add_executable(depth-first-search recursos/grafos/depth-first-search/depth-first-search.cpp)
add_executable(breadth-first-search recursos/grafos/breadth-first-search/breadth-first-search.cpp)
add_executable(flood-fill recursos/grafos/flood-fill/flood-fill.cpp)
add_executable(kruskal recursos/grafos/kruskal/kruskal.cpp)
add_executable(dijkstra recursos/grafos/dijkstra/dijkstra.cpp)
add_executable(bellman-ford recursos/grafos/bellman-ford/bellman-ford.cpp)
add_executable(floyd-warshall recursos/grafos/floyd-warshall/floyd-warshall.cpp)

add_executable(uva-ex-00459 uva/exs-004xx/ex-00459/uva-ex-00459.cpp)

add_executable(teste teste.cpp)